--- a/src/app/(site)/get-started/components/upsell-nudge.css
+++ b/src/app/(site)/get-started/components/upsell-nudge.css
@@ -159,8 +159,4 @@
   .nudge-actions {
     width: 100%;
   }
-
-  .nudge-actions > button:first-child {
-    width: 100%;
-  }
 }
